Add the item number setting.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
     <string name="settings_min_magnitude_default" translatable="false">6</string>
 
     <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
+    <string name="settings_item_number_label">Item Number(1-100)</string>
+    <string name="settings_item_number_key" translatable="false">item_number</string>
+    <string name="settings_item_number_default" translatable="false">20</string>
+
+    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
     <string name="settings_max_magnitude_label">Maximum Magnitude</string>
     <string name="settings_max_magnitude_key" translatable="false">max_magnitude</string>
     <string name="settings_max_magnitude_default" translatable="false">8</string>
